# sematic_job_crawler

./: .gitignore  ADMIN_README.md  API_DOCUMENTATION.md  Enhanced_Cloudflare_Bypass_Guide.md  FRONTEND_TESTING_GUIDE.md  Human_Challenge_Instructions.md  IMPLEMENTATION_COMPLETE.md  README.md  ROADMAP.md  SYNC_JOB_FEATURE.md  TODO.md  TopCV_403_Analysis.md  docker-compose.yml  documents.md  start-dev.sh  test_jobs.csv
backend/: .env.example  all_marqo_jobs.json  analyze_marqo_jobs.py  db-util.sh  inspect_itviec.py  inspect_topcv.py  pyproject.toml  query_all_marqo_jobs.py  run-dev.sh  test_enhanced_bypass.py  test_human_challenge.py  test_human_navigation.py  test_improved_crawler.py  test_itviec_fix.py  test_itviec_integration.py  test_simple_urls.py  test_topcv_access.py  test_topcv_crawler.py  test_topcv_direct.py  test_topcv_integration.py
backend/app/: main.py
backend/app/config/: constants.py  itviec_config.py  topcv_config.py
backend/app/crawlers/: __init__.py  base_crawler.py  crawler_manager.py  crawler_manager_backup.py  itviec_playwright_crawler.py  job_crawlers.py  topcv_playwright_crawler.py
backend/app/examples/: integrated_crawler_example.py
backend/app/models/: database.py  schemas.py  schemas_new.py
backend/app/routes/: __init__.py  admin.py  analytics.py  crawl_logs.py  data_sources.py  jobs.py  search.py  upload.py
backend/app/scheduler/: __init__.py  job_scheduler.py
backend/app/services/: __init__.py  analytics_service.py  (+10 more)
backend/scripts/: migrate_db.py  seed_data_sources.py  seed_topcv_config.py  test_integration.py  test_sync_job.py
(+54 files in other folders)
