[tool.poetry]
name = "job-crawler-backend"
version = "0.1.0"
description = "Semantic Job Crawler & Search Platform Backend"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
marqo = "^3.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
apscheduler = "^3.10.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.15.2"
playwright = "^1.40.0"
pandas = "^2.1.4"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
httpx = "^0.25.2"
playwright-stealth = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
